# versatiles-rs

./: .dockerignore  .env  .gcloudignore  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  cliff.toml  cloudbuild.yaml  codecov.yml  lefthook.yml  readme.md  rustfmt.toml
libs/versatiles_container/: Cargo.toml
libs/versatiles_container/src/: traits.rs
libs/versatiles_shared/: Cargo.toml
libs/versatiles_shared/src/: blob.rs  convert.rs  lib.rs  status_image.rs  tile_reader_parameters.rs
src/lib/versatiles_container/: Cargo.toml
src/lib/versatiles_server/: Cargo.toml
versatiles/: CONFIG.md  Cargo.toml  README.md  config.md
versatiles-lib/: Cargo.toml  README.md
versatiles-lib/src/: lib.rs
versatiles-lib/src/containers/: converter.rs  converters.rs  getters.rs  mod.rs  reader.rs  readers.rs  traits.rs  types.rs  writer.rs
versatiles-lib/src/shared/: blob.rs  compress.rs  convert.rs  error.rs  image.rs  mod.rs  pretty_print.rs  progress.rs  status_image.rs  tile_bbox.rs  tile_bbox_pyramid.rs  tile_compression.rs  tile_converter_config.rs  tile_coords.rs  tile_format.rs  tile_reader_parameters.rs
versatiles-rs-bin/: Cargo.toml
versatiles-rs-bin/src/: lib.rs  main.rs
versatiles-rs-bin/src/tools/: convert.rs  probe.rs  serve.rs
versatiles-rs-containers/: Cargo.toml
versatiles-rs-containers/src/: getters.rs  lib.rs  traits.rs
versatiles-rs-containers/src/dummy/: converter.rs  reader.rs
versatiles-rs-containers/src/mbtiles/: converter.rs  reader.rs
versatiles-rs-containers/src/tar/: converter.rs  reader.rs
versatiles-rs-containers/src/versatiles/: converter.rs  reader.rs
versatiles-rs-shared/: Cargo.toml
versatiles-rs-shared/src/: blob.rs  convert.rs  error.rs  image.rs  main.rs  progress.rs  tile_bbox_pyramid.rs  tile_converter_config.rs  tile_coords.rs  tile_reader_parameters.rs
versatiles-rs-tools/: Cargo.toml
versatiles-rs-tools/src/: convert.rs  probe.rs
versatiles/src/: lib.rs  main.rs  runtime.rs  test_http_server.rs
versatiles/src/config/: cors.rs  help.md  main.rs  mod.rs  server.rs  static_source.rs  tile_source.rs
versatiles/src/container/: converter.rs  getters.rs  mod.rs  reader.rs  tile_stream.rs  types.rs  writer.rs
versatiles/src/helper/: mod.rs  registry.rs
versatiles/src/runtime/: functions.rs  mod.rs  registry.rs
versatiles/src/server/: cors.rs  encoding.rs  handlers.rs  mod.rs  reload.rs  routes.rs  tile_server.rs  traits.rs
versatiles/src/tools/: compare.rs  convert.rs  dev.rs  help.rs  help_source.md  memory.rs  mod.rs  mosaic.rs  probe.rs  raster.rs  serve.rs  tile_breakdown.rs  tile_sampling.rs
versatiles/src/types/: blob.rs  mod.rs  tile_bbox_pyramid.rs  tile_compression.rs  tile_coords.rs  tile_format.rs
versatiles/src/utils/: compression.rs  image.rs  kdl.rs  mod.rs  tile_converter.rs  yaml.rs
versatiles/tests/: command.rs  convert.rs  convert_integrity.rs  e2e_command.rs  e2e_convert.rs  e2e_convert_integrity.rs  e2e_help.rs  e2e_serve_compression.rs  e2e_serve_config.rs  e2e_serve_static.rs  help.rs  serve.rs  serve_compression.rs  serve_config.rs  serve_cors.rs  serve_static.rs  test_utilities.rs
versatiles_container/: Cargo.toml  README.md
versatiles_container/src/: lib.rs  testing.rs
versatiles_container/src/cache/: cache_in_memory.rs  cache_on_disk.rs  cache_type.rs  map.rs  mod.rs  traits.rs  traversal_cache.rs
versatiles_container/src/container/: converter.rs  getters.rs  mod.rs  tile_chunking.rs  tile_converter.rs  writer.rs
versatiles_container/src/progress/: factory.rs  handle.rs  mod.rs  types.rs
versatiles_container/src/runtime/: builder.rs  events.rs  inner.rs  mod.rs  outer.rs  progress.rs
versatiles_container/src/traversal/: main.rs  mod.rs  order.rs  processing.rs  progress_tracker.rs  size.rs  traits.rs
versatiles_container/src/types/: config.rs  container_registry.rs  converter.rs  data_location.rs  data_source.rs  getters.rs  mod.rs  processing_config.rs  processor.rs  reader.rs  tile.rs  tile_content.rs  tile_sink.rs  tile_source.rs  tile_source_metadata.rs  tile_source_trait.rs  tile_source_type.rs  tiles_reader.rs  tiles_reader_parameters.rs  url_path.rs  writer.rs  (+1 more)
versatiles_container/tests/: round_trip.rs
versatiles_core/: Cargo.toml  README.md
versatiles_core/benches/: byte_iterator.rs  cache_performance.rs  csv.rs  multithreading_optimizations.rs
versatiles_core/src/: concurrency.rs  lib.rs
versatiles_derive/: Cargo.toml  README.md
versatiles_derive/src/: args.rs  config_doc.rs  decode_vpl.rs  doc.rs  lib.rs
versatiles_geometry/: Cargo.toml  README.md
versatiles_geometry/src/: lib.rs
versatiles_image/: Cargo.toml  README.md
versatiles_image/examples/: dem_export_tile.rs  dem_rd_bench.rs  png_lossless_bench.rs  webp_graph_hint_bench.rs  webp_lossless_bench.rs
versatiles_image/src/: _image.rs  color.rs  helper.rs  image.rs  lib.rs
versatiles_node/: .gitignore  .npmignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  PACKAGE.md  README.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.vpl.json  typedoc.json  vitest.config.ts
versatiles_node/examples/: README.md  convert-with-progress.js  convert-with-progress.mjs  convert-with-progress.ts  convert.js  convert.mjs  convert.ts  probe.js  probe.mjs  probe.ts  read-tiles.js  read-tiles.mjs  read-tiles.ts  serve.js  serve.mjs  serve.ts  vpl-pipeline.ts
versatiles_node/scripts/: generate-vpl.ts  run-examples.ts
versatiles_node/src/: README.md  codegen.rs  container.rs  container.test.ts  convert.rs  convert.test.ts  functions.test.ts  lib.rs  macros.rs  progress.rs  progress.test.ts  progress_callback.rs  runtime.rs  server.rs  server.test.ts  tile_source.rs  tile_source.test.ts  tile_source_convert.test.ts  types.rs  types.test.ts  utils.rs  vpl.test.ts
versatiles_pipeline/: Cargo.toml  README.md
versatiles_pipeline/src/: factory.rs  help.md  lib.rs  traits.rs
(+1309 files in other folders)
