[workspace]
members = [
	"versatiles",
	"versatiles_container",
	"versatiles_core",
	"versatiles_derive",
	"versatiles_geometry",
	"versatiles_image",
	"versatiles_pipeline",
]
resolver = "2"

[workspace.package]
authors = ["Michael Kreil <versatiles@michael-kreil.de>"]
categories = ["command-line-utilities", "science::geo", "web-programming::http-server"]
description = "A toolbox for converting, checking and serving map tiles in various formats."
edition = "2021"
homepage = "https://versatiles.org"
keywords = ["versatiles", "mbtiles", "tiles", "map"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/versatiles-org/versatiles-rs"
version = "0.14.4"
exclude = [
	".githooks/",
	".github/",
	".gitignore",
	".prettierignore",
	".vscode/",
	"/docker",
	"/helpers",
	"/testdata",
]

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = true
dependent-version = "upgrade"
pre-release-commit-message = "release: v{{version}}"
shared-version = true
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
panic = "unwind"
incremental = true
overflow-checks = true

[profile.test]
opt-level = 1
lto = false
incremental = true

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = true
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = true

[workspace.dependencies]
ab_glyph = { version = "0.2.29", default-features = false }
anyhow = { version = "1.0.93", default-features = false, features = ["std"] }
assert_fs = { version = "1.1.2", default-features = false }
async-trait = { version = "0.1.83", default-features = false }
axum = { version = "0.7.9", default-features = false, features = ["http1", "http2", "tokio"] }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
clap = { version = "4.5.21", features = ["derive"] }
enumset = { version = "1.1.5", default-features = false }
futures = { version = "0.3.31", features = ["default"] }
hyper = { version = "1.5.1", default-features = false, features = ["http2"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
itertools = { version = "0.13.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
log = { version = "0.4.22", default-features = false }
nom = { version = "7.1.3" }
num_cpus = { version = "1.16.0", default-features = false }
regex = { version = "1.11.1", default-features = false, features = [
	"unicode-case",
	"unicode-perl",
] }
reqwest = { version = "0.12.9", default-features = false }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync"] }
wildmatch = { version = "2.4.0", default-features = false }

versatiles = { version = "0.14.4", path = "versatiles", default-features = false }
versatiles_container = { version = "0.14.4", path = "versatiles_container", default-features = false }
versatiles_core = { version = "0.14.4", path = "versatiles_core", default-features = false }
versatiles_derive = { version = "0.14.4", path = "versatiles_derive", default-features = false }
versatiles_geometry = { version = "0.14.4", path = "versatiles_geometry", default-features = false }
versatiles_image = { version = "0.14.4", path = "versatiles_image", default-features = false }
versatiles_pipeline = { version = "0.14.4", path = "versatiles_pipeline", default-features = false }
