[workspace]
members = [
	"versatiles",
	"versatiles_container",
	"versatiles_core",
	"versatiles_derive",
	"versatiles_geometry",
	"versatiles_image",
	"versatiles_pipeline",
]
resolver = "2"

[workspace.package]
authors = ["Michael Kreil <versatiles@michael-kreil.de>"]
categories = [
	"command-line-utilities",
	"science::geo",
	"web-programming::http-server",
]
description = "A toolbox for converting, checking and serving map tiles in various formats."
edition = "2024"
homepage = "https://versatiles.org"
keywords = ["versatiles", "mbtiles", "tiles", "map"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/versatiles-org/versatiles-rs"
version = "1.1.0"
exclude = [
	".githooks/",
	".github/",
	".gitignore",
	".prettierignore",
	".vscode/",
	"/docker",
	"/scripts",
	"/testdata",
]

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = true
dependent-version = "upgrade"
pre-release-commit-message = "release: v{{version}}"
shared-version = true
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
panic = "unwind"
incremental = true
overflow-checks = true

[profile.test]
opt-level = 1
lto = false
incremental = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = true

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
assert_fs = "1.1.3"
async-trait = { version = "0.1.89", default-features = false }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
clap = { version = "4.5.50", features = ["derive"] }
enumset = { version = "1.1.10", default-features = false }
futures = { version = "0.3.31", features = ["default"] }
image = { version = "0.25.8", default-features = false, features = [
	"avif",
	"jpeg",
	"png",
	"webp",
] }
itertools = { version = "0.14.0", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
log = { version = "0.4.28", default-features = false }
num_cpus = { version = "1.17.0", default-features = false }
pretty_assertions = "1.4.1"
regex = { version = "1.12.2", default-features = false, features = [
	"std",
	"unicode-case",
	"unicode-perl",
] }
reqwest = { version = "0.12.24", default-features = false }
rstest = { version = "0.26.1", default-features = false }
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync"] }
wildmatch = { version = "2.5.0", default-features = false }

versatiles = { version = "1.1.0", path = "versatiles", default-features = false }
versatiles_container = { version = "1.1.0", path = "versatiles_container", default-features = false }
versatiles_core = { version = "1.1.0", path = "versatiles_core", default-features = false, features = [
	"image",
] }
versatiles_derive = { version = "1.1.0", path = "versatiles_derive", default-features = false }
versatiles_geometry = { version = "1.1.0", path = "versatiles_geometry", default-features = false }
versatiles_image = { version = "1.1.0", path = "versatiles_image", default-features = false }
versatiles_pipeline = { version = "1.1.0", path = "versatiles_pipeline", default-features = false }
