[workspace]
members = [
	"versatiles",
	"versatiles_container",
	"versatiles_core",
	"versatiles_derive",
	"versatiles_geometry",
	"versatiles_image",
	"versatiles_node",
	"versatiles_pipeline",
]
resolver = "2"

[workspace.package]
authors = ["Michael Kreil <versatiles@michael-kreil.de>"]
categories = [
	"command-line-utilities",
	"science::geo",
	"web-programming::http-server",
]
description = "A toolbox for converting, checking and serving map tiles in various formats."
edition = "2024"
homepage = "https://versatiles.org"
keywords = ["versatiles", "mbtiles", "pmtiles", "tiles", "map"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/versatiles-org/versatiles-rs"
version = "3.4.0"
exclude = [
	".githooks/",
	".github/",
	".gitignore",
	".prettierignore",
	".vscode/",
	"/docker",
	"/scripts",
	"/testdata",
]

[workspace.lints.rust]
unused_imports = "deny"

[workspace.lints.clippy]
# Enable pedantic lints for code quality
pedantic = { level = "deny", priority = -1 }

# Allow noisy/stylistic lints that don't improve safety
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
doc_markdown = "allow"

# Allow lints being addressed in separate phases
must_use_candidate = "allow"

# Allow reasonable casting patterns in container code
cast_precision_loss = "allow"

# Allow stylistic patterns used consistently in codebase
ignored_unit_patterns = "allow"
items_after_statements = "allow"
iter_without_into_iter = "allow"
match_wildcard_for_single_variants = "allow"
missing_fields_in_debug = "allow"
return_self_not_must_use = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_literal_bound = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow" # Domain-specific values (coordinates, binary test data) are clearer without separators
used_underscore_binding = "allow"

[workspace.metadata.release]
allow-branch = ["main"]
consolidate-commits = true
dependent-version = "upgrade"
pre-release-commit-message = "release: v{{version}}"
shared-version = true
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
panic = "unwind"
incremental = true
overflow-checks = true

[profile.test]
opt-level = 1
lto = false
incremental = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = true

[workspace.dependencies]
# Core dependencies
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
async-trait = { version = "0.1.89", default-features = false }
byteorder = { version = "1.5.0", default-features = false, features = ["std"] }
enumset = { version = "1.1.10", default-features = false }
futures = { version = "0.3.31", features = ["default"] }
itertools = { version = "0.14.0", default-features = false }
log = { version = "0.4.29", default-features = false }
num_cpus = { version = "1.17.0", default-features = false }
regex = { version = "1.12.3", default-features = false, features = [
	"std",
	"unicode-case",
	"unicode-perl",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }

# CLI dependencies
clap = { version = "4.5.57", features = ["default", "derive"] }
colored = { version = "3.1.1", default-features = false }
env_logger = { version = "0.11.8" }
termimad = { version = "0.34.1" }

# Compression dependencies
brotli = { version = "8.0.2", default-features = false, features = ["std"] }
flate2 = { version = "1.1.9", default-features = false, features = ["default"] }
zstd = { version = "0.13.3", default-features = false }

# Container/archive dependencies
tar = { version = "0.4.44", default-features = false }

# Database dependencies
r2d2 = { version = "0.8.10", default-features = false }
r2d2_sqlite = { version = "0.32.0", default-features = false }

# HTTP/Server dependencies
axum = { version = "0.8.8", default-features = false }
mime_guess = { version = "2.0.5", default-features = false }
reqwest = { version = "0.13.1", default-features = false, features = ["default-tls"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8" }

# Image processing dependencies
image = { version = "0.25.9", default-features = false, features = [
	"avif",
	"jpeg",
	"png",
	"webp",
] }
imageproc = { version = "0.26.0", default-features = false }
webp = { version = "0.3.1" }

# Geometry dependencies
geo = { version = "0.32.0" }
rstar = { version = "0.12.2", default-features = false }

# Utility dependencies
serde_yaml_ng = "0.10.0"
terminal_size = { version = "0.4.3" }
time = { version = "0.3.46", default-features = false }
uuid = { version = "1.20.0" }
wildmatch = { version = "2.6.1", default-features = false }

# Multithreading optimization dependencies
moka = { version = "0.12", features = ["future"] }  # Lock-free LRU cache
dashmap = "6.1"                                     # Concurrent HashMap
parking_lot = "0.12"                                # Fast synchronization
arc-swap = "1.8"                                    # Lock-free updates
deadpool = { version = "0.12", features = ["managed"] }  # Connection pooling

# Development dependencies
assert_cmd = { version = "2.1.2" }
assert_fs = "1.1.3"
criterion = { version = "0.8.1" }
predicates = { version = "3.1.3" }
pretty_assertions = "1.4.1"
rstest = { version = "0.26.1", default-features = false }
tempfile = "3.24.0"

versatiles = { version = "3.4.0", path = "versatiles", default-features = false }
versatiles_container = { version = "3.4.0", path = "versatiles_container", default-features = false }
versatiles_core = { version = "3.4.0", path = "versatiles_core", default-features = false }
versatiles_derive = { version = "3.4.0", path = "versatiles_derive", default-features = false }
versatiles_geometry = { version = "3.4.0", path = "versatiles_geometry", default-features = false }
versatiles_image = { version = "3.4.0", path = "versatiles_image", default-features = false }
versatiles_pipeline = { version = "3.4.0", path = "versatiles_pipeline", default-features = false }
