[package]
name = "versatiles-lib"
edition = "2021"
version = "0.6.11"
description = "A library for reading versatiles containers."
homepage = "https://versatiles.org"
repository = "https://github.com/versatiles-org/versatiles-rs"
authors = ["Michael Kreil <versatiles@michael-kreil.de>"]
keywords = ["versatiles", "mbtiles", "tiles", "map"]
categories = ["science::geo"]
readme = "README.md"
license = "MIT"
exclude = [
".githooks/",
".github/",
".gitignore",
".prettierignore",
".vscode/",
"/docker",
"/helpers",
"/testdata"
]

[dependencies]
anyhow = { version = "1.0.80", features = ["std", "backtrace"] }
async-trait = { version = "0.1.77", default-features = false }
brotli = { version = "3.4.0", default-features = false, features = ["std"] }
byteorder = { version = "1.5.0" }
bytes = { version = "1.5.0", default-features = false }
clap = { version = "4.5.1", optional = true, features = ["derive"] }
colored = { version = "2.1.0", default-features = false, optional = true }
enumset = { version = "1.1.3", default-features = false }
flate2 = { version = "1.0.28" }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
hyper = { version = "0.14.28", default-features = false, optional = true, features = ["http2", "tcp"] }
image = { version = "0.24.9", default-features = false, optional = true, features = ["jpeg", "png"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
lazy_static = { version = "1.4.0", default-features = false, optional = true }
log = { version = "0.4.21", default-features = false }
num_cpus = { version = "1.16.0", default-features = false }
r2d2 = { version = "0.8.10", default-features = false, optional = true }
r2d2_sqlite = { version = "0.22.0", default-features = false, optional = true, features = ["bundled"] }
regex = { version = "1.10.3", optional = true }
reqwest = { version = "0.11.24", default-features = false, optional = true, features = ["rustls-tls"] }
tar = { version = "0.4.40", default-features = false, optional = true }
terminal_size = { version = "0.3.0", default-features = false, optional = true }
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
webp = { version = "0.2.6", default-features = false, optional = true, features = ["img"] }

[dev-dependencies]
assert_fs = { version = "1.1.1" }

[features]
default = []
full = ["dep:clap", "dep:colored", "dep:hyper", "dep:image", "dep:lazy_static", "dep:r2d2", "dep:r2d2_sqlite", "dep:regex", "dep:reqwest", "dep:tar", "dep:terminal_size", "dep:webp"]

[lib]
name = "versatiles_lib"
path = "src/lib.rs"
