[package]
name = "versatiles-lib"
edition = "2021"
version = "0.7.0"
description = "A library for reading versatiles containers."
homepage = "https://versatiles.org"
repository = "https://github.com/versatiles-org/versatiles-rs"
authors = ["Michael Kreil <versatiles@michael-kreil.de>"]
keywords = ["versatiles", "mbtiles", "tiles", "map"]
categories = ["science::geo"]
readme = "README.md"
license = "MIT"
exclude = [
	".githooks/",
	".github/",
	".gitignore",
	".prettierignore",
	".vscode/",
	"/docker",
	"/helpers",
	"/testdata",
]

[dependencies]
anyhow = { version = "1.0.81", features = ["std", "backtrace"] }
async-trait = { version = "0.1.79", default-features = false }
brotli = { version = "4.0.0", default-features = false, features = ["std"] }
byteorder = { version = "1.5.0" }
bytes = { version = "1.6.0", default-features = false }
clap = { version = "4.5.4", optional = true, features = ["derive"] }
colored = { version = "2.1.0", default-features = false, optional = true }
enumset = { version = "1.1.3", default-features = false }
flate2 = { version = "1.0.28" }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
hyper = { version = "1.2.0", default-features = false, optional = true, features = ["http2"] }
image = { version = "0.25.1", default-features = false, optional = true, features = [
	"jpeg",
	"png",
] }
itertools = { version = "0.12.1", default-features = false, features = ["use_alloc"] }
lazy_static = { version = "1.4.0", default-features = false, optional = true }
log = { version = "0.4.21", default-features = false }
num_cpus = { version = "1.16.0", default-features = false }
r2d2 = { version = "0.8.10", default-features = false, optional = true }
r2d2_sqlite = { version = "0.24.0", default-features = false, optional = true, features = [
	"bundled",
] }
regex = { version = "1.10.4", optional = true }
reqwest = { version = "0.12.2", default-features = false, optional = true, features = [
	"rustls-tls",
] }
tar = { version = "0.4.40", default-features = false, optional = true }
terminal_size = { version = "0.3.0", default-features = false, optional = true }
tokio = { version = "1.37.0", default-features = false, features = [
	"macros",
	"rt-multi-thread",
	"sync",
] }
webp = { version = "0.2.7", default-features = false, optional = true, features = ["img"] }

[dev-dependencies]
assert_fs = { version = "1.1.1" }

[features]
default = []
full = [
	"dep:clap",
	"dep:colored",
	"dep:hyper",
	"dep:image",
	"dep:lazy_static",
	"dep:r2d2",
	"dep:r2d2_sqlite",
	"dep:regex",
	"dep:reqwest",
	"dep:tar",
	"dep:terminal_size",
	"dep:webp",
]
mock = []

[lib]
name = "versatiles_lib"
path = "src/lib.rs"
