[package]
name = "versatiles-rs-bin"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.3.21", default-features = true }
clap-verbosity-flag = { version = "2.0.1", default-features = false }
versatiles-rs-containers = { path = "../versatiles-rs-containers" }
versatiles-rs-server = { path = "../versatiles-rs-server" }
versatiles-rs-shared = { path = "../versatiles-rs-shared" }
versatiles-rs-tools = { path = "../versatiles-rs-tools" }
