[package]
name = "versatiles"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "versatiles"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "versatiles"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true, features = ["std", "backtrace"] }
async-trait.workspace = true
axum = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
enumset = { workspace = true, optional = true }
env_logger = { version = "0.11.8", default-features = false, optional = true }
hyper = { workspace = true, optional = true }
log = { workspace = true, optional = true }
mime_guess = { version = "2.0.5", default-features = false, optional = true }
regex = { workspace = true, optional = true, features = ["unicode"] }
tar = { version = "0.4.44", default-features = false, optional = true }
termimad = { version = "0.31.2", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"], optional = true }

versatiles_container = { workspace = true }
versatiles_core = { workspace = true }
versatiles_derive = { workspace = true }
versatiles_geometry = { workspace = true }
versatiles_image = { workspace = true }
versatiles_pipeline = { workspace = true }

[dev-dependencies]
assert_fs.workspace = true
lazy_static.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

versatiles_container = { workspace = true, features = ["test"] }
versatiles_core = { workspace = true, features = ["test"] }

[features]
default = ["cli"]
cli = [
	"dep:axum",
	"dep:clap",
	"dep:env_logger",
	"dep:enumset",
	"dep:hyper",
	"dep:log",
	"dep:mime_guess",
	"dep:regex",
	"dep:tar",
	"dep:termimad",
	"dep:tokio",
	"versatiles_container/cli",
	"versatiles_core/cli",
]
