[package]
name = "versatiles"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "versatiles"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "versatiles"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true, features = ["std", "backtrace"] }
async-trait.workspace = true
axum = { version = "0.8.7", default-features = false, optional = true, features = [
	"http1",
	"http2",
	"tokio",
] }
clap = { workspace = true, optional = true }
enumset = { workspace = true, optional = true }
env_logger = { version = "0.11.8", optional = true }
log = { workspace = true }
mime_guess = { version = "2.0.5", default-features = false, optional = true }
regex = { workspace = true, optional = true, features = ["unicode"] }
serde.workspace = true
serde_yaml_ng.workspace = true
tar = { version = "0.4.44", default-features = false, optional = true }
termimad = { version = "0.34.1", optional = true }
tokio = { workspace = true, features = [
	"rt-multi-thread",
	"sync",
], optional = true }
tower = { version = "0.5.2", features = [
	"buffer",
	"limit",
	"load-shed",
], optional = true }
tower-http = { version = "0.6.8", features = [
	"catch-panic",
	"cors",
	"set-header",
], optional = true }

versatiles_container = { workspace = true }
versatiles_core = { workspace = true }
versatiles_derive = { workspace = true }
versatiles_geometry = { workspace = true }
versatiles_image = { workspace = true }
versatiles_pipeline = { workspace = true }

[dev-dependencies]
assert_cmd = { version = "2.1.1", features = ["color"] }
assert_fs.workspace = true
lazy_static.workspace = true
predicates = { version = "3.1.3" }
pretty_assertions.workspace = true
reqwest = { workspace = true, features = [
	"rustls-tls",
	"gzip",
	"brotli",
	"zstd",
	"deflate",
] }
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

versatiles_container = { workspace = true, features = ["test"] }
versatiles_core = { workspace = true, features = ["test"] }

[features]
default = ["cli", "server"]
server = [
	"dep:axum",
	"dep:enumset",
	"dep:mime_guess",
	"dep:regex",
	"dep:tar",
	"dep:tokio",
	"dep:tower",
	"dep:tower-http",
]
cli = [
	"dep:clap",
	"dep:env_logger",
	"dep:enumset",
	"dep:termimad",
	"dep:tokio",
	"versatiles_container/cli",
	"versatiles_core/cli",
]
gdal = []
bindgen = []
