[package]
name = "versatiles"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[[bin]]
name = "versatiles"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "versatiles"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true, features = ["std", "backtrace"] }
arc-swap = { workspace = true, optional = true }
async-trait.workspace = true
axum = { workspace = true, optional = true, features = [
	"http1",
	"http2",
	"tokio",
] }
clap = { workspace = true, optional = true, features = ["default"] }
dashmap = { workspace = true, optional = true }
enumset = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
log.workspace = true
mime_guess = { workspace = true, optional = true }
regex = { workspace = true, optional = true, features = ["unicode"] }
serde.workspace = true
serde_yaml_ng.workspace = true
tar = { workspace = true, optional = true }
termimad = { workspace = true, optional = true }
tokio = { workspace = true, features = [
	"rt-multi-thread",
	"sync",
], optional = true }
tower = { workspace = true, optional = true, features = [
	"buffer",
	"limit",
	"load-shed",
] }
tower-http = { workspace = true, optional = true, features = [
	"catch-panic",
	"cors",
	"set-header",
] }

versatiles_container = { workspace = true }
versatiles_core = { workspace = true }
versatiles_derive = { workspace = true }
versatiles_geometry = { workspace = true }
versatiles_image = { workspace = true }
versatiles_pipeline = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true, features = ["color"] }
assert_fs.workspace = true
lazy_static.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
reqwest = { workspace = true, features = [
	"rustls-tls",
	"gzip",
	"brotli",
	"zstd",
	"deflate",
] }
rstest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }

versatiles_container = { workspace = true, features = ["test"] }
versatiles_core = { workspace = true, features = ["test"] }

[features]
default = ["cli", "server"]
server = [
	"dep:arc-swap",
	"dep:axum",
	"dep:dashmap",
	"dep:enumset",
	"dep:mime_guess",
	"dep:regex",
	"dep:tar",
	"dep:tokio",
	"dep:tower",
	"dep:tower-http",
]
cli = [
	"dep:clap",
	"dep:env_logger",
	"dep:enumset",
	"dep:termimad",
	"dep:tokio",
	"versatiles_container/cli",
]
gdal = []
bindgen = []

[package.metadata.cargo-udeps.ignore]
normal = ["env_logger", "termimad"]
