[package]
name = "versatiles_container"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
byteorder.workspace = true
dashmap.workspace = true
enumset.workspace = true
futures.workspace = true
itertools = { workspace = true, features = ["use_alloc"] }
log.workspace = true
parking_lot.workspace = true
r2d2 = { workspace = true, features = [] }
r2d2_sqlite = { workspace = true, features = ["bundled"] }
regex.workspace = true
reqwest.workspace = true
tar.workspace = true
terminal_size.workspace = true
time = { workspace = true, features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true, features = ["v4"] }

versatiles_core = { workspace = true, default-features = false }
versatiles_derive.workspace = true
versatiles_geometry.workspace = true
versatiles_image.workspace = true

[dev-dependencies]
assert_fs.workspace = true
rstest.workspace = true
tempfile.workspace = true
wildmatch.workspace = true

versatiles_core = { workspace = true, features = ["test"] }

[features]
default = []
cli = ["versatiles_core/cli"]
test = []
