[package]
name = "versatiles_container"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
byteorder.workspace = true
dashmap.workspace = true
enumset.workspace = true
futures.workspace = true
itertools = { workspace = true, features = ["use_alloc"] }
libc = "0.2"
log.workspace = true
moka.workspace = true
parking_lot.workspace = true
r2d2 = { version = "0.8.10", default-features = false }
r2d2_sqlite = { version = "0.34.0", default-features = false, features = ["bundled"] }
regex.workspace = true
reqwest.workspace = true
tar.workspace = true
terminal_size = "0.4.4"
time = { version = "0.3.47", default-features = false, features = ["formatting", "local-offset"] }
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { version = "1.23.2", features = ["v4"] }

versatiles_core = { workspace = true, default-features = false }
versatiles_derive.workspace = true
versatiles_geometry.workspace = true
versatiles_image.workspace = true

[dev-dependencies]
assert_fs.workspace = true
rstest.workspace = true
tempfile.workspace = true
wildmatch.workspace = true

versatiles_core = { workspace = true, features = ["test"] }

[dev-dependencies.versatiles_container]
path = "."
features = ["test"]

[features]
default = []
cli = ["versatiles_core/cli"]
ssh2 = ["versatiles_core/ssh2"]
test = []
